--- a/NewsPaper/templates/default.html
+++ b/NewsPaper/templates/default.html
@@ -14,6 +14,12 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <style>
+    body {
+    background: aqua;
+    color: black;
+    }
+</style>
 
 </head>
 
