--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -7,40 +7,44 @@ News Portal
 
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
-<h1>Все новости</h1>
+
+
+<div class="">
+    <h1>Все новости</h1>
     <h3>{{ time_now|date:'d M Y' }}</h3>
     <br>
-<h1>{{news|length}}</h1>
+    <h1>{{news|length}}</h1>
     <br>
 {% if news %}
-        <table style="margin: auto">
-            <tr>
-                <td>
-                    Заголовок
-                </td>
-                <td>
-                    Дата публикации
-                </td>
-                <td>
-                    Статья
-                </td>
-            </tr>
-        {% for new in news %}
-            <tr>
-                <td>
-                    {{ new.preview_name|censor }}
-                </td>
-                <td>
-                    {{ new.dateCreation|date:'d M Y'  }}
-                </td>
-                <td>
-                    {{ new.text|truncatechars:50|censor }}
-                </td>
-            </tr>
-        {% endfor %}
-        </table>
-    {% else %}
-        <h2>Новостей нет!</h2>
-    {% endif %}
+    <table style="margin: auto" border="2">
+        <tr>
+            <th>
+                Заголовок
+            </th>
+            <th>
+                Дата публикации
+            </th>
+            <th>
+                Статья
+            </th>
+        </tr>
+{% for new in news %}
+        <tr>
+            <td>
+                {{ new.preview_name|censor }}
+            </td>
+            <td>
+                {{ new.dateCreation|date:'d M Y'  }}
+            </td>
+            <td>
+                {{ new.text|truncatechars:50|censor }}
+            </td>
+        </tr>
+{% endfor %}
+    </table>
+{% else %}
+    <h2>Новостей нет!</h2>
+{% endif %}
+</div>
 
 {% endblock content %}
